[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/Options_Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Pause_Box.png" type="Texture" id=2]
[ext_resource path="res://Fonts/8-BIT_Size-38.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Fonts/8-BIT_Size-22.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Sprites/white.jpg" type="Texture" id=5]
[ext_resource path="res://Fonts/8-BIT_Size_18.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Sprites/Buttons/Base_Button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/Pressed_Button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Hover_Button.png" type="Texture" id=9]
[ext_resource path="res://Fonts/8-BIT_Size-26.fnt" type="BitmapFont" id=10]

[node name="Options_Menu" type="Panel"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 210.0
margin/top = 140.0
margin/right = 810.0
margin/bottom = 490.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 300, 200 )
transform/scale = Vector2( 0.82, 0.8 )
texture = ExtResource( 2 )

[node name="Options_Label" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 20.0
margin/right = 50.0
margin/bottom = 292.0
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Controls" type="Label" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 318.0
margin/top = 161.0
margin/right = 640.0
margin/bottom = 465.0
custom_fonts/font = ExtResource( 4 )
text = "Movement






Use or Interact"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Underscore" type="Sprite" parent="Controls"]

transform/pos = Vector2( 159.984, 82.9185 )
transform/scale = Vector2( 0.152595, 0.00661234 )
texture = ExtResource( 5 )
modulate = Color( 0.550781, 0.550781, 0.550781, 1 )

[node name="Underscore1" type="Sprite" parent="Controls"]

transform/pos = Vector2( 159.626, 256 )
transform/scale = Vector2( 0.229453, 0.00661234 )
texture = ExtResource( 5 )
modulate = Color( 0.550781, 0.550781, 0.550781, 1 )

[node name="Controls list" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 322.0
margin/top = 234.0
margin/right = 640.0
margin/bottom = 462.0
custom_fonts/font = ExtResource( 6 )
text = "Arrow keys
or
WASD





e"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Back Button" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 139.0
margin/top = 315.0
margin/right = 461.0
margin/bottom = 369.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Text" type="Label" parent="Back Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = -2.0
margin/right = 323.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 10 )
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Volume Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 139.0
margin/top = 125.0
margin/right = 461.0
margin/bottom = 147.0
custom_fonts/font = ExtResource( 4 )
text = "MUSIC VOLUME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Volume Slider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 139.0
margin/top = 155.0
margin/right = 461.0
margin/bottom = 175.0
range/min = 0.0
range/max = 100.0
range/step = 5.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
tick_count = 10
ticks_on_borders = true
focus_mode = 2

[node name="Fullscreen Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 139.0
margin/top = 217.0
margin/right = 461.0
margin/bottom = 239.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fullscreen Button" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 262.0
margin/top = 250.0
margin/right = 338.0
margin/bottom = 280.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]

[connection signal="value_changed" from="Volume Slider" to="." method="_on_Volume_Slider_value_changed"]

[connection signal="toggled" from="Fullscreen Button" to="." method="_on_Fullscreen_Button_toggled"]


